--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-  height: 100%;
+/* Fade-in das imagens */
+img {
+  transition: all 0.5s ease-out;
 }
